--- a/views/tasks/new.ejs
+++ b/views/tasks/new.ejs
@@ -2,7 +2,7 @@
 
 <div class="row mt-3">
   <div class="col-8 offset-2">
-    <h3>Create a New Listing</h3>
+    <h3>Assign a New Task</h3>
     <form method="post" action="/tasks">
       <div class="mb-3">
         <label for="task" class="form-label">Task:</label>
